# Prophecy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Client/: .gitignore  CMakeLists.txt
Client/src/: Client.cpp
Prophecy/: CMakeLists.txt
Prophecy/Prophecy/src/: Prophecy.h  compiled.cpp  compiled.h
Prophecy/Prophecy/src/Platform/Linux/: LinuxWindow.cpp
Prophecy/Prophecy/src/Platform/Linux/Core/: LinuxWindow.cpp  MacOSWindow.h
Prophecy/Prophecy/src/Platform/MacOS/Core/: MacOSWindow.cpp  MacOSWindow.h
Prophecy/Prophecy/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Prophecy/Prophecy/src/Platform/Windows/Core/: WindowsWindow.cpp  WindowsWindow.h
Prophecy/Prophecy/src/Prophecy/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
Prophecy/Prophecy/src/Prophecy/Event/: Event.h
Prophecy/Prophecy/src/Prophecy/Math/: Matrix.cpp  Matrix.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h
Prophecy_tests/: CMakeLists.txt
Prophecy_tests/tests/: CMakeLists.txt
Prophecy_tests/tests/Core/: LayerStack.cpp
Prophecy_tests/tests/Math/: MatrixTest.cpp  Vector2dTest.cpp  Vector3D.cpp  Vector3dTest.cpp
